
* Added batchQC to phenoData

2009-06-08 R Scharpf - committed version 1.3.4

* fixed bug in the biasAdjNP function.  updated biasAdj function

2009-06-20 R Scharpf - committed version 1.3.5

* created CrlmmSetList, ABset, and CopyNumberSet classes.  
  - added a few methods to support these classes

* crlmmWrapper does normalization / genotyping and optionally splits
  the results by chromosome

* several changes to the copynumber vignette

2009-06-29 R Scharpf - committed version 1.3.6

* updated computeCopynumber
* export A, B methods for ABset class

2009-07-01 M Ritchie - committed version 1.3.7

* made memory savings to reading and normalization if Illumina data
* Now use 'scanDates' slot to save scan dates instead of saving them in phenoData slot
* added vignette for genoytping illumina data (crlmmIllumina.pdf in inst/doc and crlmmIllumina.Rnw in inst/scripts)
* Changed stop() to warning() when idats are of different type in readIdatFiles()


2009-07-06 R Scharpf - committed version 1.3.8

* initial development of copy number methods for illumina platform

* added Rd files for previously defined classes/methods

* some improvements to chromosome X copy number estimation

2009-07-06 R Scharpf - committed version 1.3.9

* fixed bugs in biasAdj and biasAdjNP

2009-07-09 R Scharpf - committed version 1.3.10

* changed defaults for crlmmWrapper: save.it=FALSE

* splitByChr method looks for 'chr' or 'chromosome' in colnames 

* sample-specific standard deviations in the .getEmission function

* add check for duplicated positions in creating locusset object

* computeCopynumber returns an object of class CrlmmSetList
  
  - dimnames for the elements in the list are the same

  - elements in the list are ordered by chromosome and physical
    position

  - copy number parameters in the featureData of the CopyNumberSet
    element are thresholded

2009-07-14 R Scharpf - committed version 1.3.11

* computeCopynumber requires 10 or more samples

