@@ -77,6 +77,8 @@ export(batch,
 ##       ellipse,
 ##       computeEmission,
        list.celfiles,
+       ncol,
+       nrow,
        position,
        readIdatFiles,
        sampleNames,
