@@ -58,7 +58,6 @@ hist(crlmmOut$SNR) ##approx. 5-fold higher than what we see in Affy!
 ##cnAB was assigned to the global environment
 NP = (cnAB$A+cnAB$B)/2 # average normalized A and B intensities
 colnames(NP) <- colnames(crlmm:::calls(crlmmOut))
-cnenv = new.env()
 chr22 <- computeCopynumber(chrom=22, A=res[["A"]], B=res[["B"]], 
 			   calls=crlmm:::calls(crlmmOut),
 			   conf=confs(crlmmOut), 
